# infovis-parallel

./: .gitignore  ENB2012.yaml  GLFW-b.nix  Makefile  ReadMe.md  bindings-GLFW.nix  create-tunnels.sh  dataset.yaml  default.nix  google-protobuf-src.tar.xz  infovis-parallel.cabal  infovis-parallel.config  infovis-parallel.docx  infovis-parallel.html  infovis-parallel.md  infovis.proto3  input.yaml  launch-in-cave.sh  launch-slaves.sh  nixpkgs.json  presentation.yaml  shell.nix  shell.sh  slides.sh  spacenav.yaml  vislang.yuml  vulkan-api.nix  world.yaml
csharp/: Makefile  infovis-unity.sln
data/: ENB2012.md  ENB2012.yaml  ESIF-controllers.md  ESIF.json  ESIF.yaml  bsm-learning-study-2.tsv  bsm-learning-study-2.yaml  demo.sh  diagnostics.yaml  launch-cave.sh  launch-diagnostics.sh  launch-in-cave.sh  launch-laptop.sh  launch-zspace.sh  linked-ab.yaml  log  optoma-projector-stick.yaml  optoma-projector.yaml  pair.json  pair.yaml  presentation.yaml  projector.json  projector.yaml  single.yaml  stick.yaml  test.tsv
data/cave/: advanced.yaml  input-kafka.yaml  input-vrpn.yaml  input.yaml  world.yaml
data/demo/: input.yaml  world.yaml
data/diagnostics/: input.yaml  spacenav.yaml  world.yaml
data/laptop/: advanced.yaml  input.yaml  joystick.yaml  world.yaml
data/zspace/: advanced.yaml  input-kafka.yaml  input-vrpn.yaml  input.yaml  world.yaml
docs/: infovis-parallel.docx  infovis-parallel.md  slides.sh
examples/: .gitignore  alter.pbb  alter.pbt  axes.pbb  axes.pbt  bslm-pbbs.tar.xz  bslm.awk  corner-points.pbb  corner-points.pbt  eight-points.pbb  eight-points.pbt  helices.awk  helices.pbb  helices.pbt  make.sh  rectangles.pbb  rectangles.pbt  some-text.pbb  some-text.pbt  test-case.pbb
go/: .gitignore  Makefile  demo.sh  example.infovis  go.mod  go.sum  julia.infovis  main.go  test.infovis
go/infovis/: Absorber.go  Demo.go  Files.go  Interpreter.go  Joystick.go  Kafka.go  Main.go  Printer.go  Recorder.go  Relay.go  Types.go  Websocket.go  go.mod  infovis.proto3.pb.go
go/scripts/: bslm.infovis  demo.infovis  example.infovis  julia.infovis  script.infovis  serve-local.infovis  serve-net.infovis
go/snapshots/: quantum-analytic.glb  quantum-emulator.glb  quantum-ionq.glb  ssa-v6.glb  ssa-v9.glb  test-pattern.glb
haskell/: .gitignore  config.yaml  default.nix  glut.yaml  infovis-parallel.cabal  infovis-parallel.cabal-old  infovis-parallel.config  joystick.yaml  keyboard.yaml  launch.sh  release.nix  shell.nix  spacenav.yaml  visualize.yaml
haskell/data/: Makefile  launch-zspace.sh  launch.sh  presentation.yaml
haskell/data.old/: ENB2012.md
haskell/data.old/cave/: input-vrpn.yaml
haskell/data.old/diagnostics/: spacenav.yaml  world-solo.yaml
haskell/data.old/laptop/: world.yaml
haskell/data/interpretation/: joystick.yaml
haskell/data/laptop/: spacenav.yaml
haskell/data/zspace/: input-vrpn.yaml  world.yaml
haskell/examples/: ENB2012.yaml  Makefile  presentation.yaml  shell.nix
haskell/examples/datasets/: ENB2012.yaml  test.awk  test.tsv  test.yaml
haskell/examples/displays/: asus-vg278.yaml  esif-b308.yaml  esif-b311-0.yaml  esif-b311-1.yaml  esif-b311-2.yaml  esif-b311-3.yaml  esif-b311-4.yaml  esif-b311-5.yaml  lemur.yaml
haskell/examples/forward/: esif-b311.yaml  joystick.yaml
haskell/examples/interpretation/: spacenav.yaml
haskell/examples/interpretations/: spacenav.yaml
haskell/examples/presentations/: box-grid.yaml  complex-data.pbb  complex-grid.pbb  complex.yaml  line-grid.yaml  rectangle-grid.yaml
haskell/examples/visualize/: laptop.yaml
haskell/src/: InfoVis.hs  Main.hs  OldMain.hs  Test.hs
haskell/src/Control/Concurrent/MVar/: Util.hs
haskell/src/Data/List/: Util.hs
haskell/src/Data/Math/: Util.hs
haskell/src/Graphics/OpenGL/: Util.hs
haskell/src/Graphics/OpenGL/Util/: Instances.hs  Projection.hs  Setup.hs  Types.hs
haskell/src/InfoVis/Parallel/: Bridge.hs  Compiler.hs  Dataset.hs  Events.hs  IO.hs  KafkaMultiplex.hs  KafkaSender.hs  NewTypes.hs  Presenter.hs  ProtoBuf.hs  Sender.hs  Types.hs  Visualizer.hs  WebsocketSender.hs
haskell/src/InfoVis/Parallel/Events/: ButtonFrame.hs  KeyFrame.hs  KeyMovement.hs  Location.hs  Types.hs  Typing.hs
haskell/src/InfoVis/Parallel/Presentation/: Displaying.hs  Presenting.hs
haskell/src/InfoVis/Parallel/Presenter/: Axes.hs  Container.hs  Extent.hs  Grid.hs  Link.hs  Presentation.hs  Types.hs
haskell/src/InfoVis/Parallel/Process/: Track.hs  Util.hs
haskell/src/InfoVis/Parallel/Process/Track/: Kafka.hs  VRPN.hs
haskell/src/InfoVis/Parallel/ProtoBuf/: Compiler.hs  Sender.hs  Sink.hs  Source.hs
haskell/src/InfoVis/Parallel/Rendering/: Buffers.hs  Frames.hs  NewShapes.hs  Program.hs  Selector.hs  Shapes.hs  Text.hs
haskell/src/InfoVis/Parallel/Types/Input/: VRPN.hs
haskell/src/InfoVis/Parallel/Visualizer/: Graphics.hs  Sink.hs  Source.hs
haskell/src/Linear/: Util.hs
haskell/src/Linear/Util/: Graphics.hs  Instances.hs
isopach/: libisopach_0_6.nix  shell.nix
julia/: Project.toml
julia/examples/: main.jl
julia/src/: Buffers.jl  InfoVis.jl  Plots.jl  Primitives.jl  Transport.jl
protobuf/: Makefile  infovis.proto3
protobuf/examples/: alter.pbb  axes.pbb  axes.pbt  bslm-pbbs.tar.xz  bslm.awk  centered.pbb  centered.pbt  corner-points.pbb  corner-points.pbt  frame-1.pbt  frame-2.pbt  frame-3.pbt  helices.awk  helices.pbb  helices.pbt  message.pbb  message.pbt  move-camera.pbb  move-camera.pbt  move-tool.pbb  move-tool.pbt  rectangles.pbb  rectangles.pbt  response.pbb  response.pbt  some-text.pbb  some-text.pbt
python/: shell.nix
python/examples/: main.py
shaders/: triangle.vert
src/: Example.hs  Main.hs
src/Infovis/: Cache.cs  Infovis.csproj  Parsing.cs  Program.cs  Protobuf.cs  Socket.cs  Types.cs  example.pbb  example.pbt
src/Lib/: Vulkan.hs
src/Linear/: Util.hs
standalone/: infovis.proto3  shell.sh
test-client/: shell.sh  test-client.cabal
unity/: .gitattributes  .gitignore  design-cone.fcstd  make-arrowhead.awk  make-cone.awk
web/: .gitignore  Makefile  eslint.json  model.html  package.json  view.css  webpack.config.js
(+268 files in other folders)
