name         : infovis-parallel
version      : 1.0.0.0
synopsis     : Parallel-planes information visualization.
description  : This information visualization shows multidimensional data as parallel planes with scatterplots connected by lines for corresponding data points.  It is a three-dimensional generalization of the two-dimensional parallel coordinate plots.

license      : MIT
license-file : LICENSE
author       : Brian W Bush <brian.bush@nrel.gov>
maintainer   : Brian W Bush <brian.bush@nrel.gov>
copyright    : (c) 2015-18 National Renewable Energy Laboratory
category     : Graphics
build-type   : Simple
cabal-version: >= 1.10
homepage     : https://bitbucket.org/bwbush/infovis-parallel
bug-reports  : https://bwbush.atlassian.net/projects/HIVPP/issues/
package-url  : https://bitbucket.org/bwbush/infovis-parallel/downloads/infovis-parallel-$version.tar.gz


source-repository head
  type    : git
  location: https://bitbucket.org/bwbush/infovis-parallel.git


library

  exposed-modules  : InfoVis.Parallel.Types
                     InfoVis.Parallel.Types.Presentation
                     InfoVis.Parallel.Service
  other-modules    : Linear.Util.Instances
  build-depends    : base >= 4.8 && < 5
                   , aeson
                   , binary
                   , data-default
                   , deepseq
                   , GLFW-b
                   , linear
                   , logging-effect
                   , mtl
                   , vector
                   , vulkan-api
                   , yaml
  hs-source-dirs   : src
  exposed          : True
  buildable        : True
  ghc-options      : -Wall
  default-language : Haskell2010


executable infovis-parallel

  main-is          : Main.hs
  other-modules    : InfoVis.Parallel.Service
  hs-source-dirs   : src
  build-depends    : base
                   , aeson
                   , binary
                   , containers
                   , data-default
                   , deepseq
                   , directory
                   , filepath
                   , GLFW-b
                   , linear
                   , logging-effect
                   , mtl
                   , process
                   , template-haskell
                   , vector
                   , vulkan-api
                   , yaml
  ghc-options      : -threaded -Wall
  default-language : Haskell2010


executable vulkan-example

  main-is          : Example.hs
  other-modules    : Lib.GLFW
                     Lib.Utils
                     Lib.Utils.TH
                     Lib.Vulkan
                     Lib.Vulkan.Pipeline
                     Lib.Vulkan.Presentation
  hs-source-dirs   : src
  build-depends    : base
                   , containers
                   , directory
                   , filepath
                   , GLFW-b
                   , process
                   , template-haskell
                   , vulkan-api
  ghc-options      : -threaded -Wall
  default-language : Haskell2010
