name         : infovis-parallel
version      : 0.4.0.0
synopsis     : Parallel-planes information visualization.
description  : This information visualization shows multidimensional data as parallel planes with scatterplots connected by lines for corresponding data points.  It is a three-dimensional generalization of the two-dimensional parallel coordinate plots.


license      : MIT
license-file : LICENSE
author       : Brian W Bush <brian.bush@nrel.gov>
maintainer   : Brian W Bush <brian.bush@nrel.gov>
copyright    : (c) 2015-17 National Renewable Energy Laboratory
category     : Graphics
build-type   : Simple
cabal-version: >= 1.10
homepage     : https://bitbucket.org/bwbush/infovis-parallel
bug-reports  : https://bwbush.atlassian.net/projects/HIVPP/issues/
package-url  : https://bitbucket.org/bwbush/infovis-parallel/downloads/infovis-parallel-$version.tar.gz


source-repository head
  type    : git
  location: https://bwbush@bitbucket.org/bwbush/infovis-parallel.git
  tag     : multiclient


executable infovis-parallel
  main-is          : Main.hs
  other-modules    : Paths_infovis_parallel
                     Data.Math.Util
                     Graphics.OpenGL.Util.Projection
                     Graphics.OpenGL.Util.Setup
                     Graphics.OpenGL.Util.Types
                     InfoVis
                     InfoVis.Parallel.Compiler
                     InfoVis.Parallel.NewTypes
                     InfoVis.Parallel.ProtoBuf
                     InfoVis.Parallel.Rendering.Buffers
                     InfoVis.Parallel.Rendering.Frames
                     InfoVis.Parallel.Rendering.NewShapes
                     InfoVis.Parallel.Rendering.Program
                     InfoVis.Parallel.Rendering.Selector
                     InfoVis.Parallel.Sender
                     InfoVis.Parallel.Visualizer
                     Linear.Util
                     Linear.Util.Graphics
                     Linear.Util.Instances
  hs-source-dirs   : src
  build-depends    : base >= 4.10 && < 4.11
                   , aeson
                   , array
                   , base64-bytestring
                   , binary
                   , bytestring
                   , cereal
                   , cmdargs
                   , containers
                   , data-default
                   , deepseq
                   , GLUT
                   , hashable
                   , lens
                   , linear
                   , logging-effect
                   , mtl
                   , OpenGL
                   , opengl-dlp-stereo
                   , OpenGLRaw
                   , protobuf
                   , split
                   , text
                   , vector
                   , websockets
                   , yaml
--other-extensions :    
  ghc-options      : -threaded -Wall
  default-language : Haskell2010
